# canvas-manager

./: CMakeLists.txt  README.md  convert-to-wasm.bat  convert-to-wasm.sh
app/: main.cpp  to-wasm-converter.cpp
inc/: json.h
inc/figures-creating/: Circles.h  IntersectionPoints.h  Lines.h
inc/manager/: DependenciesManager.h  Manager.h  ShapesManager.h
inc/manager/dependencies/: Angle.h  AngleValue.h  AnglesDependency.h  CirclesDependency.h  LineAngleDependency.h  LineCircleDependency.h  LineSegmentDependency.h  LinesDependency.h  OrderedPair.h  PolygonCircleDependency.h  PolygonTypeDependency.h  SegmentArmsDependency.h  SegmentLength.h  SegmentsDependency.h
inc/manager/shapes/: CircleShape.h  PointShape.h  SegmentShape.h
inc/math/: Constans.h  Distance.h  QuadraticEquation.h  SystemOf2LinearEquations.h
inc/math/equations/: CircleEquation.h  LineEquation.h  PointEquation.h
src/figures-creating/: Circles.cpp  IntersectionPoints.cpp  Lines.cpp
src/manager/: DependenciesManager.cpp  Manager.cpp  ShapesManager.cpp
src/manager/dependencies/: Angle.cpp  AngleValue.cpp  AnglesDependency.cpp  CirclesDependency.cpp  LineAngleDependency.cpp  LineCircleDependency.cpp  LineSegmentDependency.cpp  LinesDependency.cpp  OrderedPair.cpp  PolygonCircleDependency.cpp  PolygonTypeDependency.cpp  SegmentArmsDependency.cpp  SegmentLength.cpp  SegmentsDependency.cpp
src/manager/shapes/: CircleShape.cpp  PointShape.cpp  SegmentShape.cpp
src/math/: Constans.cpp  Distance.cpp  QuadraticEquation.cpp  SystemOf2LinearEquations.cpp
src/math/equations/: CircleEquation.cpp  (+2 more)
